<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_items"
        android:title="@string/main_items">
        <menu>
            <item
                android:id="@+id/action_mainFragment"
                android:title="@string/homeMenu"
                app:showAsAction="always"
                android:icon="@drawable/ic_event"
                />
            <item
                android:id="@+id/action_habitList"
                android:title="@string/listMenu"
                app:showAsAction="always"
                android:icon="@drawable/ic_list"
                />
            <item
                android:id="@+id/action_completed"
                android:title="@string/listCompleted"
                app:showAsAction="always"
                android:icon="@drawable/ic_checklist"
                />
            <item
                android:id="@+id/action_profile"
                android:title="@string/action_Profile"
                app:showAsAction="always"
                android:icon="@drawable/ic_profile"
                />
        </menu>
    </item>
    <item
        android:id="@+id/label_items"
        android:title="@string/label_items">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                app:showAsAction="always"
                android:icon="@drawable/ic_settings"
                />
            <item
                android:id="@+id/action_showAboutUs"
                android:title="@string/action_AboutUs"
                app:showAsAction="always"
                android:icon="@drawable/ic_info"
                />
        </menu>
    </item>
</menu>