<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="habit"
            type="com.example.habitmanager.data.habit.model.Habit" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.habit.HabitManagerFragment"
        android:transitionName="@string/add_transition">

        <!-- TODO: Update blank fragment layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtHabitNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/guideTop"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toEndOf="@+id/guideStart">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHabitName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/HabitName"
                android:text="@={habit.name}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtHabitDescriptionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/txtHabitNameLayout"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toEndOf="@+id/guideStart"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHabitDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/HabitDescription"
                android:text="@={habit.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtStartDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toEndOf="@+id/guideStart"
            app:layout_constraintTop_toBottomOf="@+id/txtHabitDescriptionLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtStartDatePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/DatePicker"
                android:text="@={habit.startDateString}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEndDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toEndOf="@+id/guideStart"
            app:layout_constraintTop_toBottomOf="@+id/txtStartDateLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEndDatePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/EndDatePicker"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/CategorySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:minHeight="48dp"
            android:selectedItemPosition="@={habit.categoryId -1}"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toEndOf="@+id/guideStart"
            app:layout_constraintTop_toBottomOf="@+id/txtEndDateLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/addFAB"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/guideBottom"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:srcCompat="@drawable/ic_done" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>